--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -13,6 +14,7 @@
         src="./assets/bowtie-cat.png"
         alt="Profile image of cat wearing a bow tie."
       />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -49,11 +51,27 @@
           <li>Javascript is what makes a web page interactive.</li>
           <li>Javascript can act as both a front-end and back-end code.</li>
         </ul>
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>You must call a function in order to run that piece of code.</li>
+          <li>You call a function by listing the function name followed by "()".</li>
+        </ul>
+      </section>
+
+      <section class="card" id="debugging">
+        <ul>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>When debugging, it is helpful to have someone else test your code.</li>
+          <li>A styles sheet must be linked to the HTML in the head tag.</li>
+        </ul>
       </section>
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
